--- a/app/views/AmendPlanEndDateView.scala.html
+++ b/app/views/AmendPlanEndDateView.scala.html
@@ -24,7 +24,7 @@
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("amendPlanEndDate.title"))) {
+@layout(pageTitle = title(form, messages("amendPlanEndDate.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.AmendPlanEndDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
