--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import models.responses.*
+@import models.NormalMode
 @import java.time.format.DateTimeFormatter
 @import views.html.components.*
 @import utils.MaskAndFormatUtils.*
@@ -42,28 +43,16 @@
     @govukSummaryList(SummaryList(
         rows = Seq(
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.reference")
-                ),
-                value = Value(
-                    content = HtmlContent(directDebitReference)
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.reference")),
+                value = Value(content = HtmlContent(directDebitReference))
             ),
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.accountNumber")
-                ),
-                value = Value(
-                    content = HtmlContent(maskAccountNumber(directDebitDetails.bankAccountNumber))
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.accountNumber")),
+                value = Value(content = HtmlContent(maskAccountNumber(directDebitDetails.bankAccountNumber)))
             ),
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.sortCode")
-                ),
-                value = Value(
-                    content = HtmlContent(maskSortCode(directDebitDetails.bankSortCode))
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.sortCode")),
+                value = Value(content = HtmlContent(maskSortCode(directDebitDetails.bankSortCode)))
             )
         )
     ))
@@ -79,7 +68,7 @@
                 actions = Some(Actions(
                     items = Seq(
                         ActionItem(
-                            href = "#",
+                            href = routes.AmendPaymentAmountController.onPageLoad(NormalMode).url,
                             content = messages("directDebitPaymentSummary.activePayment.summary.action"),
                             visuallyHiddenText = Some(messages(pp.paymentReference))
                         )
@@ -88,36 +77,20 @@
             )),
             rows = Seq(
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.planType")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.planType)
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.planType")),
+                    value = Value(content = HtmlContent(pp.planType))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.hodService)
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")),
+                    value = Value(content = HtmlContent(pp.hodService))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.date")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy")))
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.date")),
+                    value = Value(content = HtmlContent(pp.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.amount")
-                    ),
-                    value = Value(
-                        content = HtmlContent(formatAmount(pp.scheduledPaymentAmount))
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.amount")),
+                    value = Value(content = HtmlContent(formatAmount(pp.scheduledPaymentAmount)))
                 )
             )
         ))
