DTR-195: navigation from ap3 to dd1

--- a/app/views/PaymentPlanConfirmationView.scala.html
+++ b/app/views/PaymentPlanConfirmationView.scala.html
@@ -90,7 +90,8 @@
         )
     )
 
-    @govukButton(
-        ButtonViewModel(messages("paymentPlanConfirmation.close"))
-    )
+    @govukButton(Button(
+        href = Some(routes.DirectDebitSummaryController.onPageLoad().url),
+        content = Text(messages("paymentPlanConfirmation.close"))
+    ))
 }
