DTR-247 merge conflicts fixed

--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -48,25 +48,28 @@
             title = Some(CardTitle(
             content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
         )),
-        actions = Some(Actions(
-            items = Seq(
-                ActionItem(
-                        href = routes.AmendPaymentAmountController.onPageLoad(NormalMode).url,
-                        content = messages("paymentPlanDetails.details.amend"),
-                        visuallyHiddenText = Some(messages("1000000"))
-                    ),
-                ActionItem(
-                        href = "#",
-                        content = messages("paymentPlanDetails.details.cancel"),
-                        visuallyHiddenText = Some(messages("1000000"))
-                    ),
-                ActionItem(
-                        href = "#",
-                        content = messages("paymentPlanDetails.details.suspend"),
-                        visuallyHiddenText = Some(messages("1000000"))
+        actions =
+            if (showActions) {
+                Some(Actions(
+                    items = Seq(
+                        ActionItem(
+                            href = "#",
+                            content = messages("paymentPlanDetails.details.amend"),
+                            visuallyHiddenText = Some(messages("1000000"))
+                        ),
+                        ActionItem(
+                            href = "#",
+                            content = messages("paymentPlanDetails.details.cancel"),
+                            visuallyHiddenText = Some(messages("1000000"))
+                        ),
+                        ActionItem(
+                            href = "#",
+                            content = messages("paymentPlanDetails.details.suspend"),
+                            visuallyHiddenText = Some(messages("1000000"))
+                        )
                     )
-                )
-            ))
+                ))
+            } else None
         )),
         rows = Seq(
             SummaryListRow(
