DTR-247: routing corrected

--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -53,7 +53,7 @@
                 Some(Actions(
                     items = Seq(
                         ActionItem(
-                            href = "#",
+                            href = routes.AmendPaymentAmountController.onPageLoad(NormalMode).url,
                             content = messages("paymentPlanDetails.details.amend"),
                             visuallyHiddenText = Some(messages("1000000"))
                         ),
