DTR-194 create summary row in controller and pass it to view

--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -29,7 +29,7 @@
         govukSummaryList: GovukSummaryList
 )
 
-@(paymentReference: String, paymentPlanDetails: PaymentPlanDetailsResponse, showActions: Boolean)(implicit request: Request[_], messages: Messages)
+@(paymentReference: String, rows: Seq[SummaryListRow], showActions: Boolean)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("paymentPlanDetails.title")), backLink = Some(routes.DirectDebitSummaryController.onPageLoad().url)) {
 
@@ -71,31 +71,6 @@
                 ))
             } else None
         )),
-        rows = Seq(
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planType")),
-                value = Value(content = HtmlContent(paymentPlanDetails.planType))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.paymentFor")),
-                value = Value(content = HtmlContent(paymentPlanDetails.hodService))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.dateSetUp")),
-                value = Value(content = HtmlContent(paymentPlanDetails.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.regularPaymentAmount")),
-                value = Value(content = HtmlContent(formatAmount(paymentPlanDetails.scheduledPaymentAmount.toDouble)))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planStartDate")),
-                value = Value(content = HtmlContent(paymentPlanDetails.scheduledPaymentStartDate.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planEndDate")),
-                value = Value(content = HtmlContent(paymentPlanDetails.scheduledPaymentEndDate.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            )
-        )
+        rows = rows
     ))
 }
